--- a/mypattern-base/mypattern-base.cbp
+++ b/mypattern-base/mypattern-base.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="mypattern-base" prefix_auto="1" extension_auto="1" />
+				<Option output="d_mypattern-base" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -34,7 +34,7 @@
 				</Linker>
 			</Target>
 			<Target title="Debug Linux">
-				<Option output="mypattern-base" prefix_auto="1" extension_auto="1" />
+				<Option output="d_mypattern-base" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -57,9 +57,32 @@
 					<Add directory="/usr/lib/i386-linux-gnu/sigc++-2.0/include/" />
 				</Compiler>
 			</Target>
+			<Target title="Release Linux">
+				<Option output="mypattern-base" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="" />
+				<Option object_output="obj/Release/" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-Wall" />
+					<Add directory="include" />
+					<Add directory="/usr/include/glibmm-2.4" />
+					<Add directory="/usr/lib/i386-linux-gnu/glibmm-2.4/include" />
+					<Add directory="/usr/include/glib-2.0" />
+					<Add directory="/usr/lib/i386-linux-gnu/glib-2.0/include" />
+					<Add directory="/usr/include/cairomm-1.0" />
+					<Add directory="/usr/include/cairo" />
+					<Add directory="/usr/include/sigc++-2.0" />
+					<Add directory="/usr/include" />
+					<Add directory="/usr/include/freetype2" />
+					<Add directory="/usr/lib/i386-linux-gnu/cairomm-1.0/include" />
+					<Add directory="/usr/lib/i386-linux-gnu/sigc++-2.0/include/" />
+				</Compiler>
+			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-std=c++0x" />
+			<Add option="-std=c++11" />
 			<Add directory="include" />
 			<Add directory="$(GTK_BASEPATH)/include/glibmm-2.4" />
 			<Add directory="$(GTK_BASEPATH)/lib/glibmm-2.4/include" />
@@ -101,6 +124,8 @@
 		<Unit filename="include/units.h" />
 		<Unit filename="include/user.h" />
 		<Unit filename="include/valuerangetype.h" />
+		<Unit filename="include/xmlnode.h" />
+		<Unit filename="include/xmlparameter.h" />
 		<Unit filename="src/bezier.cpp" />
 		<Unit filename="src/beziercomplex.cpp" />
 		<Unit filename="src/bezierdefinition.cpp" />
@@ -123,6 +148,8 @@
 		<Unit filename="src/point.cpp" />
 		<Unit filename="src/size.cpp" />
 		<Unit filename="src/user.cpp" />
+		<Unit filename="src/xmlnode.cpp" />
+		<Unit filename="src/xmlparameter.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
