--- a/mypattern-base/mypattern-base.cbp
+++ b/mypattern-base/mypattern-base.cbp
@@ -96,12 +96,12 @@
 			<Add directory="$(GTK_BASEPATH)/lib/cairomm-1.0/include" />
 			<Add directory="$(GTK_BASEPATH)/lib/sigc++-2.0/include" />
 		</Compiler>
+		<Unit filename="include/MeasureValue.h" />
 		<Unit filename="include/bezier.h" />
 		<Unit filename="include/beziercomplex.h" />
 		<Unit filename="include/bezierdefinition.h" />
 		<Unit filename="include/constants.h" />
 		<Unit filename="include/curvedefinition.h" />
-		<Unit filename="include/drawoptions.h" />
 		<Unit filename="include/errorcode.h" />
 		<Unit filename="include/floatpatternparameter.h" />
 		<Unit filename="include/intpatternparameter.h" />
@@ -109,7 +109,6 @@
 		<Unit filename="include/measures.h" />
 		<Unit filename="include/measurevalue.h" />
 		<Unit filename="include/objecttype.h" />
-		<Unit filename="include/papersettings.h" />
 		<Unit filename="include/part.h" />
 		<Unit filename="include/partdefinition.h" />
 		<Unit filename="include/pattern.h" />
@@ -120,21 +119,21 @@
 		<Unit filename="include/patternparametervalue.h" />
 		<Unit filename="include/patterntype.h" />
 		<Unit filename="include/point.h" />
-		<Unit filename="include/size.h" />
-		<Unit filename="include/units.h" />
+		<Unit filename="include/test.h" />
 		<Unit filename="include/user.h" />
 		<Unit filename="include/valuerangetype.h" />
+		<Unit filename="include/xmlnode.h" />
+		<Unit filename="include/xmlparameter.h" />
+		<Unit filename="src/MeasureValue.cpp" />
 		<Unit filename="src/bezier.cpp" />
 		<Unit filename="src/beziercomplex.cpp" />
 		<Unit filename="src/bezierdefinition.cpp" />
 		<Unit filename="src/curvedefinition.cpp" />
-		<Unit filename="src/drawoptions.cpp" />
 		<Unit filename="src/floatpatternparameter.cpp" />
 		<Unit filename="src/intpatternparameter.cpp" />
 		<Unit filename="src/landmark.cpp" />
 		<Unit filename="src/measures.cpp" />
 		<Unit filename="src/measurevalue.cpp" />
-		<Unit filename="src/papersettings.cpp" />
 		<Unit filename="src/part.cpp" />
 		<Unit filename="src/partdefinition.cpp" />
 		<Unit filename="src/pattern.cpp" />
@@ -144,7 +143,6 @@
 		<Unit filename="src/patternparameter.cpp" />
 		<Unit filename="src/patternparametervalue.cpp" />
 		<Unit filename="src/point.cpp" />
-		<Unit filename="src/size.cpp" />
 		<Unit filename="src/user.cpp" />
 		<Extensions>
 			<code_completion />
