--- a/mypattern-base-test/mypattern-base-test.cbp
+++ b/mypattern-base-test/mypattern-base-test.cbp
@@ -63,6 +63,7 @@
 				</Compiler>
 				<Linker>
 					<Add library="d_mypattern-base" />
+					<Add library="sigc-2.0" />
 					<Add directory="/usr/lib/i386-linux-gnu/" />
 				</Linker>
 			</Target>
@@ -111,6 +112,9 @@
 		</Compiler>
 		<Linker>
 			<Add library="glibmm-2.4" />
+			<Add library="glib-2.0" />
+			<Add library="gtkmm-2.4" />
+			<Add library="sigc-2.0" />
 			<Add directory="../mypattern-base/" />
 			<Add directory="../mypattern-base" />
 		</Linker>
