Added XmlElement to mypattern-data to represent and parse single XML-tags implemented parsing of tags in XmlElement smaller bugfixes in XmlParameter implemented tests for XmlElement and XmlParameter

--- a/mypattern-data-test/mypattern-data-test.cbp
+++ b/mypattern-data-test/mypattern-data-test.cbp
@@ -16,8 +16,8 @@
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add library="d_mypattern-base" />
 					<Add library="d_mypattern-data" />
+					<Add library="d_mypattern-base" />
 					<Add directory="../UnitTest++/bin/Debug" />
 				</Linker>
 				<ExtraCommands>
@@ -62,7 +62,9 @@
 			<Add directory="../mypattern-base" />
 		</Linker>
 		<Unit filename="main.cpp" />
+		<Unit filename="xmlelementtest.cpp" />
 		<Unit filename="xmlnodetest.cpp" />
+		<Unit filename="xmlparametertest.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
