--- a/mypattern-base/mypattern-base.cbp
+++ b/mypattern-base/mypattern-base.cbp
@@ -101,14 +101,20 @@
 		<Unit filename="include/bezierdefinition.h" />
 		<Unit filename="include/constants.h" />
 		<Unit filename="include/curvedefinition.h" />
+		<Unit filename="include/drawoptions.h" />
 		<Unit filename="include/errorcode.h" />
-		<Unit filename="include/evaluationtreenode.h" />
-		<Unit filename="include/exception.h" />
+		<Unit filename="include/evaluation/evaluationtreenode.h" />
+		<Unit filename="include/evaluation/evaluationtreeobserver.h" />
+		<Unit filename="include/evaluation/formula/constantterm.h" />
+		<Unit filename="include/evaluation/formula/scalarterm.h" />
+		<Unit filename="include/evaluation/formula/term.h" />
+		<Unit filename="include/exceptions/exception.h" />
 		<Unit filename="include/floatpatternparameter.h" />
 		<Unit filename="include/intpatternparameter.h" />
 		<Unit filename="include/landmark.h" />
 		<Unit filename="include/measures.h" />
 		<Unit filename="include/measurevalue.h" />
+		<Unit filename="include/mypattern-base.h" />
 		<Unit filename="include/objecttype.h" />
 		<Unit filename="include/part.h" />
 		<Unit filename="include/partdefinition.h" />
@@ -126,8 +132,12 @@
 		<Unit filename="src/beziercomplex.cpp" />
 		<Unit filename="src/bezierdefinition.cpp" />
 		<Unit filename="src/curvedefinition.cpp" />
-		<Unit filename="src/evaluationtreenode.cpp" />
-		<Unit filename="src/exception.cpp" />
+		<Unit filename="src/evaluation/evaluationtreenode.cpp" />
+		<Unit filename="src/evaluation/evaluationtreeobserver.cpp" />
+		<Unit filename="src/evaluation/formula/constantterm.cpp" />
+		<Unit filename="src/evaluation/formula/scalarterm.cpp" />
+		<Unit filename="src/evaluation/formula/term.cpp" />
+		<Unit filename="src/exceptions/exception.cpp" />
 		<Unit filename="src/floatpatternparameter.cpp" />
 		<Unit filename="src/intpatternparameter.cpp" />
 		<Unit filename="src/landmark.cpp" />
