Started implementing formula evaluation * implemented parts of Term class, ScalarTerm, ConstantTerm, parts of QuotientTerm. * Added Tests for formula evaluation, ScalarTerm, ConstantTerm and QuotientTerm. * Added a FormulaEvaluationException class

--- a/mypattern-base-test/mypattern-base-test.cbp
+++ b/mypattern-base-test/mypattern-base-test.cbp
@@ -125,7 +125,10 @@
 			<Add directory="../mypattern-base/" />
 			<Add directory="../mypattern-base" />
 		</Linker>
+		<Unit filename="src/ConstantTermTest.cpp" />
 		<Unit filename="src/FormulaTest.cpp" />
+		<Unit filename="src/QuotientTermTest.cpp" />
+		<Unit filename="src/ScalarTermTest.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Extensions>
 			<code_completion />
