--- a/trunk/mypattern-base/mypattern-base.cbp
+++ b/trunk/mypattern-base/mypattern-base.cbp
@@ -106,9 +106,11 @@
 		<Unit filename="include/evaluation/evaluationtreenode.h" />
 		<Unit filename="include/evaluation/evaluationtreeobserver.h" />
 		<Unit filename="include/evaluation/formula/constantterm.h" />
+		<Unit filename="include/evaluation/formula/quotientterm.h" />
 		<Unit filename="include/evaluation/formula/scalarterm.h" />
 		<Unit filename="include/evaluation/formula/term.h" />
 		<Unit filename="include/exceptions/exception.h" />
+		<Unit filename="include/exceptions/formulaevaluationexception.h" />
 		<Unit filename="include/floatpatternparameter.h" />
 		<Unit filename="include/intpatternparameter.h" />
 		<Unit filename="include/landmark.h" />
@@ -135,9 +137,11 @@
 		<Unit filename="src/evaluation/evaluationtreenode.cpp" />
 		<Unit filename="src/evaluation/evaluationtreeobserver.cpp" />
 		<Unit filename="src/evaluation/formula/constantterm.cpp" />
+		<Unit filename="src/evaluation/formula/quotientterm.cpp" />
 		<Unit filename="src/evaluation/formula/scalarterm.cpp" />
 		<Unit filename="src/evaluation/formula/term.cpp" />
 		<Unit filename="src/exceptions/exception.cpp" />
+		<Unit filename="src/exceptions/formulaevaluationexception.cpp" />
 		<Unit filename="src/floatpatternparameter.cpp" />
 		<Unit filename="src/intpatternparameter.cpp" />
 		<Unit filename="src/landmark.cpp" />
