--- a/trunk/mypattern-base-test/mypattern-base-test.cbp
+++ b/trunk/mypattern-base-test/mypattern-base-test.cbp
@@ -21,6 +21,10 @@
 					<Add library="glibmm-2.4" />
 					<Add directory="$(GTK_BASEPATH)/lib" />
 				</Linker>
+				<ExtraCommands>
+					<Add after="./mypattern-base-test" />
+					<Mode after="always" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release">
 				<Option output="libmypattern-base-test" prefix_auto="1" extension_auto="1" />
@@ -64,7 +68,7 @@
 				<Linker>
 					<Add library="d_mypattern-base" />
 					<Add library="sigc-2.0" />
-					<Add library="../mypattern-base/libd_mypattern-base.a" />
+					<Add library="..\mypattern-base\libd_mypattern-base.a" />
 					<Add directory="/usr/lib/i386-linux-gnu/" />
 					<Add directory="../UnitTest++/bin/Debug" />
 				</Linker>
@@ -120,16 +124,18 @@
 		<Linker>
 			<Add library="glibmm-2.4" />
 			<Add library="glib-2.0" />
-			<Add library="gtkmm-2.4" />
+			<Add library="gtkmm-3.0" />
 			<Add library="sigc-2.0" />
 			<Add library="UnitTest++" />
 			<Add directory="../mypattern-base/" />
 			<Add directory="../mypattern-base" />
+			<Add directory="../UnitTest++/bin/Debug" />
 		</Linker>
 		<Unit filename="src/ConstantTermTest.cpp" />
 		<Unit filename="src/FormulaTest.cpp" />
 		<Unit filename="src/QuotientTermTest.cpp" />
 		<Unit filename="src/ScalarTermTest.cpp" />
+		<Unit filename="src/differencetermtests.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/producttermtest.cpp" />
 		<Extensions>
