Formula evaluation * Finished formula evaluation to a state, that all bassic operations are parsed and evaluated in the correct order * Added tests for formula evaluation

--- a/mypattern-base/mypattern-base.cbp
+++ b/mypattern-base/mypattern-base.cbp
@@ -143,6 +143,7 @@
 		<Unit filename="src/evaluation/formula/productterm.cpp" />
 		<Unit filename="src/evaluation/formula/quotientterm.cpp" />
 		<Unit filename="src/evaluation/formula/scalarterm.cpp" />
+		<Unit filename="src/evaluation/formula/sumterm.cpp" />
 		<Unit filename="src/evaluation/formula/term.cpp" />
 		<Unit filename="src/exceptions/exception.cpp" />
 		<Unit filename="src/exceptions/formulaevaluationexception.cpp" />
