--- a/mypattern-base/mypattern-base.cbp
+++ b/mypattern-base/mypattern-base.cbp
@@ -103,6 +103,7 @@
 		<Unit filename="include/curvedefinition.h" />
 		<Unit filename="include/drawoptions.h" />
 		<Unit filename="include/errorcode.h" />
+		<Unit filename="include/evaluation/evaluationroot.h" />
 		<Unit filename="include/evaluation/evaluationtreenode.h" />
 		<Unit filename="include/evaluation/evaluationtreeobserver.h" />
 		<Unit filename="include/evaluation/formula/constantterm.h" />
@@ -136,6 +137,7 @@
 		<Unit filename="src/beziercomplex.cpp" />
 		<Unit filename="src/bezierdefinition.cpp" />
 		<Unit filename="src/curvedefinition.cpp" />
+		<Unit filename="src/evaluation/evaluationroot.cpp" />
 		<Unit filename="src/evaluation/evaluationtreenode.cpp" />
 		<Unit filename="src/evaluation/evaluationtreeobserver.cpp" />
 		<Unit filename="src/evaluation/formula/constantterm.cpp" />
