--- a/mypattern-base/Makefile
+++ b/mypattern-base/Makefile
@@ -1,13 +1,26 @@
 # all: %.o
 
-OBJ=beziercomplex.o bezier.o bezierdefinition.o curvedefinition.o floatpatternparameter.o intpatternparameter.o landmark.o measures.o measurevalue.o part.o partdefinition.o pattern.o patterndefinition.o patternerror.o patternobject.o patternparameter.o patternparametervalue.o point.o test.o user.o  exception.o formulaevaluationexception.o evaluationroot.o evaluationtreenode.o evaluationtreeobserver.o constantterm.o differenceterm.o productterm.o quotientterm.o scalarterm.o sumterm.o term.o
+OBJ=./src/patternerror.o ./src/user.o ./src/point.o ./src/measurevalue.o ./src/curvedefinition.o ./src/floatpatternparameter.o ./src/partdefinition.o ./src/part.o ./src/pattern.o ./src/evaluation/evaluationtreeobserver.o ./src/evaluation/evaluationroot.o ./src/evaluation/evaluationtreenode.o ./src/evaluation/formula/quotientterm.o ./src/evaluation/formula/term.o ./src/evaluation/formula/scalarterm.o ./src/evaluation/formula/constantterm.o ./src/evaluation/formula/productterm.o ./src/evaluation/formula/sumterm.o ./src/evaluation/formula/differenceterm.o ./src/patterndefinition.o ./src/intpatternparameter.o ./src/bezier.o ./src/beziercomplex.o ./src/landmark.o ./src/measures.o ./src/exceptions/exception.o ./src/exceptions/formulaevaluationexception.o ./src/patternparametervalue.o ./src/patternobject.o ./src/patternparameter.o ./src/bezierdefinition.o
 
+INCLUDES=-I./include -I/usr/include/glibmm-2.4/ -I/usr/lib/x86_64-linux-gnu/glibmm-2.4/include -I/usr/lib/i386-linux-gnu/glibmm-2.4/include/ -I/usr/include/glib-2.0/ -I/usr/lib/x86_64-linux-gnu/glib-2.0/include/ -I/usr/lib/i386-linux-gnu/glib-2.0/include/ -I/usr/include/cairomm-1.0/ -I/usr/include/sigc++-2.0/ -I/usr/lib/i386-linux-gnu/sigc++-2.0/include/ -I/usr/lib/x86_64-linux-gnu/sigc++-2.0/include/ -I/usr/include/cairo/ -I/usr/include/freetype2/ -I/usr/lib/i386-linux-gnu/cairomm-1.0/include/ -I/usr/lib/x86_64-linux-gnu/cairomm-1.0/include/
 
 libmypattern-base: $(OBJ)
 	ar rcs libmypattern-base.a $(OBJ)
 
-%.o: ./src/%.cpp ./src/exceptions/%.cpp ./src/evaluation/%.cpp ./src/evaluation/formula/%.cpp
-	gcc -p -Wall -std=c++0x -I./include -g -c $<
+./src/exceptions/%.o: ./src/exceptions/%.cpp
+	gcc -p -Wall -std=c++0x $(INCLUDES) -o $@  -g -c $<
+
+./src/%.o: ./src/%.cpp
+	gcc -p -Wall -std=c++0x $(INCLUDES) -o $@  -g -c $<
+
+./src/evaluation/%.o: ./src/evaluation/%.cpp
+	gcc -p -Wall -std=c++0x $(INCLUDES) -o $@  -g -c $<
+
+./src/evaluation/formula/%.o: ./src/evaluation/formula/%.cpp
+	gcc -p -Wall -std=c++0x $(INCLUDES) -o $@  -g -c $<
+
+#%.o: ./src/%.cpp ./src/exceptions/%.cpp ./src/evaluation/%.cpp ./src/evaluation/formula/%.cpp
+#	gcc -p -Wall -std=c++0x -I./include -g -c $<
 
 clean:
 	rm *.o
